feat: Controller updated to store the comics page internally to be able to work offline & index page clean-up

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,15 +1,7 @@
 @(randomLink: String)
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Random XKCD Comic</title>
-  </head>
-  <body>
+@main("Random XKCD Comic") {
     <h1>XKCD Comic</h1>
     <p>Click on the random comic:</p>
     <a href="@randomLink" target="_blank">@randomLink</a>
-  </body>
-</html>
-
+}
